force-app/main/default/objects/Case/fields/Chatter_Id__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Id__c</fullName>
    <label>Chatter ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>