force-app/main/default/objects/Case/fields/ChatterURL__c.field-meta.xml
<CustomField>
    <fullName>ChatterURL__c</fullName>
    <label>Chatter URL</label>
    <type>Url</type>
</CustomField>