force-app/main/default/objects/Case/fields/Custom_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Custom_Assignee__c</fullName>
    <label>Custom Assignee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>