force-app/main/default/objects/Case/fields/Custom_Reporter__c.field-meta.xml
<CustomField>
    <fullName>Custom_Reporter__c</fullName>
    <label>Custom Reporter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>