force-app/main/default/objects/Case/fields/Custom_Status__c.field-meta.xml
<CustomField>
    <fullName>Custom_Status__c</fullName>
    <label>Custom Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>