force-app/main/default/objects/Case/fields/Customer_reporter__c.field-meta.xml
<CustomField>
    <fullName>Customer_reporter__c</fullName>
    <formula>Owner:User.FirstName  &amp;  Owner:User.LastName</formula>
    <label>Customer reporter</label>
    <type>Text</type>
</CustomField>