force-app/main/default/objects/Case/fields/Issue_Related_to__c.field-meta.xml
<CustomField>
    <fullName>Issue_Related_to__c</fullName>
    <label>Issue Related to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inspire Planner</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>QB Integration</fullName>
            </value>
            <value>
                <fullName>SF to SF sync</fullName>
            </value>
            <value>
                <fullName>WorkOrder Templates</fullName>
            </value>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Goals</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>New Access</fullName>
            </value>
            <value>
                <fullName>Existing Access</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
                <isActive>false</isActive>
                <label>Account</label>
            </value>
            <value>
                <fullName>Account Merge</fullName>
                <isActive>false</isActive>
                <label>Account Merge</label>
            </value>
            <value>
                <fullName>Contact</fullName>
                <isActive>false</isActive>
                <label>Contact</label>
            </value>
            <value>
                <fullName>Contact Merge</fullName>
                <isActive>false</isActive>
                <label>Contact Merge</label>
            </value>
            <value>
                <fullName>Data Migration - Certificates</fullName>
                <isActive>false</isActive>
                <label>Data Migration - Certificates</label>
            </value>
            <value>
                <fullName>Data Migration - Opportunity</fullName>
                <isActive>false</isActive>
                <label>Data Migration - Opportunity</label>
            </value>
            <value>
                <fullName>Data Migration - Products</fullName>
                <isActive>false</isActive>
                <label>Data Migration - Products</label>
            </value>
            <value>
                <fullName>Data Migration - Projects</fullName>
                <isActive>false</isActive>
                <label>Data Migration - Projects</label>
            </value>
            <value>
                <fullName>Deployment Issue</fullName>
                <isActive>false</isActive>
                <label>Deployment Issue</label>
            </value>
            <value>
                <fullName>Email</fullName>
                <isActive>false</isActive>
                <label>Email</label>
            </value>
            <value>
                <fullName>Files</fullName>
                <isActive>false</isActive>
                <label>Files</label>
            </value>
            <value>
                <fullName>Lead</fullName>
                <isActive>false</isActive>
                <label>Lead</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
                <isActive>false</isActive>
                <label>Opportunity</label>
            </value>
            <value>
                <fullName>Program Setup</fullName>
                <isActive>false</isActive>
                <label>Program Setup</label>
            </value>
            <value>
                <fullName>Project</fullName>
                <isActive>false</isActive>
                <label>Project</label>
            </value>
            <value>
                <fullName>Project Template</fullName>
                <isActive>false</isActive>
                <label>Project Template</label>
            </value>
            <value>
                <fullName>Standard Covered</fullName>
                <isActive>false</isActive>
                <label>Standard Covered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>