force-app/main/default/objects/Case/fields/Reason_for_delay__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_delay__c</fullName>
    <label>Reason for delay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>