force-app/main/default/objects/Case/fields/RecordLink__c.field-meta.xml
<CustomField>
    <fullName>RecordLink__c</fullName>
    <label>Record Link</label>
    <type>Url</type>
</CustomField>