force-app/main/default/objects/Case/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <label>Release</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1 release 2</fullName>
            </value>
            <value>
                <fullName>Q2 release 1</fullName>
            </value>
            <value>
                <fullName>Q2 release 2</fullName>
            </value>
            <value>
                <fullName>Old SF deprecation</fullName>
            </value>
            <value>
                <fullName>May Release 2</fullName>
                <isActive>false</isActive>
                <label>May Release 2</label>
            </value>
            <value>
                <fullName>May Release 3</fullName>
                <isActive>false</isActive>
                <label>May Release 3</label>
            </value>
            <value>
                <fullName>May Release 4</fullName>
                <isActive>false</isActive>
                <label>May Release 4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>