force-app/main/default/objects/Case/fields/Responce_Time__c.field-meta.xml
<CustomField>
    <fullName>Responce_Time__c</fullName>
    <label>Responce Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>