force-app/main/default/objects/Case/fields/Support_Owner_2__c.field-meta.xml
<CustomField>
    <fullName>Support_Owner_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Owner 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Second_Support_cases</relationshipName>
    <type>Lookup</type>
</CustomField>