force-app/main/default/objects/Case/listViews/Sales_Meeting_Cases.listView-meta.xml
<ListView>
    <fullName>Sales_Meeting_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>startsWith</operation>
        <value>Sales Meeting -</value>
    </filters>
    <label>Sales Meeting Cases</label>
</ListView>