force-app/main/default/objects/Case/listViews/SF_to_SF.listView-meta.xml
<ListView>
    <fullName>SF_to_SF</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Support_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Salesforce_Support</value>
    </filters>
    <filters>
        <field>Issue_Related_to__c</field>
        <operation>equals</operation>
        <value>SF to SF sync</value>
    </filters>
    <label>SF to SF</label>
</ListView>