force-app/main/default/objects/Case/listViews/SFDCSupport_Case.listView-meta.xml
<ListView>
    <fullName>SFDCSupport_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Support_Owner__c</field>
        <operation>contains</operation>
        <value>Farhan,Chetan</value>
    </filters>
    <label>SFDCSupport</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>